core-services/Longhorn/GatewayAPI/04-httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-redirect
  namespace: longhorn-system
spec:
  parentRefs:
    - kind: Gateway
      name: prod-gw-longhorn
      sectionName: http
  hostnames:
    - longhorn.prod.cilium.virtualelephant.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 302
